<resources>
    <string name="app_name">Reto2 Jonathan</string>
    <string name="logo">Logo</string>
    <string name="news">News</string>
    <string name="welcome_to_the_all_news">Welcome to the all-news</string>
    <string name="sing_in">Sing in</string>
    <string name="google"><b>Google</b> News</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="logodescription">Logo de la app</string>
    <string name="parcial_2">Parcial 2</string>
    <string name="nombre">Jonathan Meriño Bolivar</string>
    <string name="titulo">TITULO AQUI</string>
    <string name="contenido">AQUI VA EL CONTENIDO</string>
    <string name="cancelar">Cancelar</string>
    <string name="declinar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
</resources>
